<resources>
    <string name="app_name">Patient Portal</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="countrycode">+91</string>
    <string name="entermobnum">Your Mobile Number</string>
    <string name="otptext">We will send One Time Password to your registered phone number</string>
    <string name="otpVerificationText">Please type the verification code sent your mobile</string>
    <string name="OTP">OTP</string>
    <string name="otpTitle">OTP Verification</string>

    <string name="childcaretips"> 1. Look down.Pay attention to the children. \n
        2. Keep talking. Until your baby can talk \n
        3. Be with kids whenever you are at home \n
        4. Do not complain but cop up\n
        5. Health is an important concern\n</string>

    <string name="fitness">1. Do not skip breakfast \n
        2. Eat regular meals \n
        3. Eat plenty of fruit and veg \n
        4. Get more active \n
        5. Drink plenty of water \n </string>

    <string name="haircare">1. Shana Seeds for boosting hair growth \n 2. Hot oil massage \n 3. Reduce hair falls with egg white \n 3. Meditate \n 4. Indian Gooseberry (Amla) \n 5. Juice of potato for controlling hair fall \n </string>
</resources>