<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:background="@color/colorPrimary">

        <ImageView
            android:layout_width="@dimen/dimen_50_dp"
            android:layout_height="@dimen/dimen_50_dp"
            android:layout_centerInParent="true"
            android:contentDescription="TODO"
            app:srcCompat="@drawable/ic_stay_primary_portrait_black_24dp" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/imagview"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:layout_marginTop="120dp"
        android:src="@drawable/curved_" />

    <LinearLayout
        android:id="@+id/mobileNumberLay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imagview"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/phonelay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_10_dp"
            android:orientation="horizontal"
            android:padding="@dimen/dimen_5_dp">

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:editable="false"
                android:maxLength="3"
                android:text="@string/countrycode" />

            <EditText
                android:id="@+id/mobileNumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:hint="@string/entermobnum"
                android:inputType="phone"
                android:maxLength="10" />
        </LinearLayout>

        <TextView
            android:id="@+id/otpText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_10_dp"
            android:padding="@dimen/dimen_5_dp"
            android:text="@string/otptext" />

        <ImageView
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mobileNumberLay"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/dimen_10_dp"
            android:src="@drawable/next" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/otpLay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imagview"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/otpVerificationText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/dimen_10_dp"
            android:padding="@dimen/dimen_5_dp"
            android:text="@string/otpTitle" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/dimen_10_dp"
            android:padding="@dimen/dimen_5_dp"
            android:text="@string/otpVerificationText" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_10_dp"
            android:orientation="horizontal"
            android:padding="@dimen/dimen_5_dp">

            <EditText
                android:id="@+id/edt1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_2_dp"
                android:layout_weight="1"
                android:background="@drawable/block"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="1"
                android:padding="@dimen/dimen_5_dp" />


            <EditText
                android:id="@+id/edt2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_2_dp"
                android:layout_weight="1"
                android:background="@drawable/block"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="1"
                android:padding="@dimen/dimen_5_dp" />

            <EditText
                android:id="@+id/edt3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_2_dp"
                android:layout_weight="1"
                android:background="@drawable/block"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="1"
                android:padding="@dimen/dimen_5_dp" />

            <EditText
                android:id="@+id/edt4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_2_dp"
                android:layout_weight="1"
                android:background="@drawable/block"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="1"
                android:padding="@dimen/dimen_5_dp" />

            <EditText
                android:id="@+id/edt5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_2_dp"
                android:layout_weight="1"
                android:background="@drawable/block"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="1"
                android:padding="@dimen/dimen_5_dp" />

            <EditText
                android:id="@+id/edt6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_2_dp"
                android:layout_weight="1"
                android:background="@drawable/block"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="1"
                android:padding="@dimen/dimen_5_dp" />

        </LinearLayout>


        <EditText
            android:id="@+id/otp_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_10_dp"
            android:hint="@string/OTP"
            android:inputType="number"
            android:maxLength="6"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/otp_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mobileNumberLay"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/dimen_10_dp"
            android:src="@drawable/next" />
    </LinearLayout>
</RelativeLayout>